# VulkanProject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: compile_mac.sh  compile_win32.bat  shader.frag  shader.vert
src/: CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
